# LearnOpenGL

./: .gitignore  CMakeLists.txt  README.md  glad.c  main.cpp  shader.h
include/glad/: glad.h
shaders/: fragmentShader.fs  vertexShader.vs
src/: color4.h  glad.c  glfw_window.cpp  glfw_window.h  main.cpp  shader.cpp  shader.h  shader_loader.cpp  shader_loader.h  vector2.h  vertex.h
